==> daniel0076/CC1101_PSOC6/CC1101_PSOC6.cpp <==
#include "cy_retarget_io.h"
#include <CC1101_PSOC6.h>

void CC1101::reset(void)                  // reset defined in CC1101 datasheet
{
    SPI_DRIVE_CSN_LOW();
    cyhal_system_delay_us(10);
    SPI_DRIVE_CSN_HIGH();
    cyhal_system_delay_us(40);

    spi_write_strobe(SRES);
    cyhal_system_delay_us(100);
}

uint8_t CC1101::set_debug_level(uint8_t set_debug_level = 1)  //default ON
{
    debug_level = set_debug_level;        //set debug level of CC1101 outputs

    return debug_level;
}

uint8_t CC1101::get_debug_level(void)
{
    return debug_level;
}

uint8_t CC1101::begin(volatile uint8_t &My_addr)
{
    uint8_t CC1101_freq_select, CC1101_mode_select, CC1101_channel_select;
    uint8_t partnum, version;

    GDO_set();                            //setup AVR GPIO ports

    set_debug_level(set_debug_level());   //set debug level of CC1101 outputs

    if(debug_level > 0){
        printf("Init CC1101...\n");
    }

    spi_begin();                          //inits SPI Interface
    reset();                              //CC1101 init reset

    spi_write_strobe(SFTX);  cyhal_system_delay_us(100);//flush the TX_fifo content
    spi_write_strobe(SFRX);  cyhal_system_delay_us(100);//flush the RX_fifo content

    partnum = spi_read_register(PARTNUM); //reads CC1101 partnumber
    version = spi_read_register(VERSION); //reads CC1101 version number

    //checks if valid Chip ID is found. Usualy 0x03 or 0x14. if not -> abort
    if(version == 0x00 || version == 0xFF){
            if(debug_level > 0){
                printf("No CC1101 Found\n");
            }

            return FALSE;
        }

    if(debug_level > 0){
        printf("Partnumber: %x\n", partnum);
        printf("Version: %x\n", version);
    }

    //default settings
    My_addr = 0x00;
    CC1101_freq_select = 0x02;    //433.92MHz
    CC1101_mode_select = 0x01;    //gfsk 1.2kbps
    CC1101_channel_select = 0x01;


    //set modulation mode
    set_mode(CC1101_mode_select);

    //set ISM band
    set_ISM(CC1101_freq_select);

    //set channel
    set_channel(CC1101_channel_select);

    //set output power amplifier
    set_output_power_level(0);            //set PA to 0dBm as default

    //set my receiver address
    set_myaddr(My_addr);                  //set addr

    if(debug_level > 0){
        printf("...done\n");
    }

    receive();                            //set CC1101 in receive mode

    return TRUE;
}

void CC1101::show_register_settings(void)
{
    if(debug_level > 0){
        uint8_t config_reg_verify[CFG_REGISTER],Patable_verify[CFG_REGISTER];

        spi_read_burst(READ_BURST,config_reg_verify,CFG_REGISTER);  //reads all 47 config register
        spi_read_burst(PATABLE_BURST,Patable_verify,8);             //reads output power settings
        printf("CFG_reg: \n");

        for(uint8_t i = 0 ; i < CFG_REGISTER; i++)  //showes rx_buffer for debug
            {
                printf("%x ", config_reg_verify[i]);
                if(i==9 || i==19 || i==29 || i==39) //just for beautiful output style
                    {
                        printf("\n");
                    }
            }
            printf("\n");
            printf("PaTable: ");

            for(uint8_t i = 0 ; i < 8; i++)         //showes rx_buffer for debug
                {
                    printf("%x ",Patable_verify[i]);
                }
        printf("\n");
    }
}

uint8_t CC1101::sidle(void)
{
    uint8_t marcstate;

    spi_write_strobe(SIDLE);              //sets to idle first. must be in

    marcstate = 0xFF;                     //set unknown/dummy state value

    while(marcstate != 0x01)              //0x01 = sidle
    {
        marcstate = (spi_read_register(MARCSTATE) & 0x1F); //read out state of CC1101 to be sure in RX
    }
      cyhal_system_delay_us(100);
    return TRUE;
}

uint8_t CC1101::transmit(void)
{
    uint8_t marcstate;

    sidle();                              //sets to idle first.
    spi_write_strobe(STX);                //sends the data over air

    marcstate = 0xFF;                     //set unknown/dummy state value

    while(marcstate != 0x01)              //0x01 = ILDE after sending data
    {
        marcstate = (spi_read_register(MARCSTATE) & 0x1F); //read out state of CC1101 to be sure in IDLE and TX is finished
        //uart_puthex_byte(marcstate);
    }
      cyhal_system_delay_us(100);
    return TRUE;
}

uint8_t CC1101::receive(void)
{
    uint8_t marcstate;

    sidle();                              //sets to idle first.
    spi_write_strobe(SRX);                //writes receive strobe (receive mode)

    marcstate = 0xFF;                     //set unknown/dummy state value

    while(marcstate != 0x0D)              //0x0D = RX
    {
        marcstate = (spi_read_register(MARCSTATE) & 0x1F); //read out state of CC1101 to be sure in RX
        //uart_puthex_byte(marcstate);
    }
      cyhal_system_delay_us(100);
    return TRUE;
}

void CC1101::wor_enable()
{
/*
    EVENT1 = WORCTRL[6:4] -> Datasheet page 88
    EVENT0 = (750/Xtal)*(WOREVT1<<8+WOREVT0)*2^(5*WOR_RES) = (750/26Meg)*65407*2^(5*0) = 1.89s

                        (WOR_RES=0;RX_TIME=0)               -> Datasheet page 80
i.E RX_TIMEOUT = EVENT0*       (3.6038)      *26/26Meg = 235.8ms
                        (WOR_RES=0;RX_TIME=1)               -> Datasheet page 80
i.E.RX_TIMEOUT = EVENT0*       (1.8029)      *26/26Meg = 117.9ms
*/
    sidle();

    spi_write_register(MCSM0, 0x18);    //FS Autocalibration
    spi_write_register(MCSM2, 0x01);    //MCSM2.RX_TIME = 1b

    // configure EVENT0 time
    spi_write_register(WOREVT1, 0xFF);  //High byte Event0 timeout
    spi_write_register(WOREVT0, 0x7F);  //Low byte Event0 timeout

    // configure EVENT1 time
    spi_write_register(WORCTRL, 0x78);  //WOR_RES=0b; tEVENT1=0111b=48d -> 48*(750/26MHz)= 1.385ms

    spi_write_strobe(SFRX);             //flush RX buffer
    spi_write_strobe(SWORRST);          //resets the WOR timer to the programmed Event 1
    spi_write_strobe(SWOR);             //put the radio in WOR mode when CSn is released

      cyhal_system_delay_us(100);
}

void CC1101::wor_reset()
{
    sidle();                            //go to IDLE
    spi_write_register(MCSM2, 0x01);    //MCSM2.RX_TIME = 1b
    spi_write_strobe(SFRX);             //flush RX buffer
    spi_write_strobe(SWORRST);          //resets the WOR timer to the programmed Event 1
    spi_write_strobe(SWOR);             //put the radio in WOR mode when CSn is released

      cyhal_system_delay_us(100);
}

uint8_t CC1101::packet_available()
{
    if(GDO2_PIN_IS_HIGH())                           //if RF package received
    {
        if(spi_read_register(IOCFG2) == 0x06)               //if sync word detect mode is used
        {
            while(GDO2_PIN_IS_HIGH()){               //wait till sync word is fully received
                printf("wait for sync word\n");
            }
        }

        if(debug_level > 0){
            printf("packet available\n");
        }
        return TRUE;
    }
    return FALSE;
}

uint8_t CC1101::get_payload(uint8_t rxbuffer[], uint8_t &pktlen, uint8_t &my_addr,
                               uint8_t &sender, int8_t &rssi_dbm, uint8_t &lqi)
{
    uint8_t crc;

    rx_fifo_erase(rxbuffer);                               //delete rx_fifo bufffer

    if(rx_payload_burst(rxbuffer, pktlen) == FALSE)        //read package in buffer
    {
        rx_fifo_erase(rxbuffer);                           //delete rx_fifo bufffer
        return FALSE;                                    //exit
    }
    else
    {
        my_addr = rxbuffer[1];                             //set receiver address to my_addr
        sender = rxbuffer[2];

        if(check_acknowledge(rxbuffer, pktlen, sender, my_addr) == TRUE) //acknowlage received?
        {
            rx_fifo_erase(rxbuffer);                       //delete rx_fifo bufffer
            return FALSE;                                //Ack received -> finished
        }
        else                                               //real data, and send acknowladge
        {
            rssi_dbm = rssi_convert(rxbuffer[pktlen + 1]); //converts receiver strength to dBm
            lqi = lqi_convert(rxbuffer[pktlen + 2]);       //get rf quialtiy indicator
            crc = check_crc(lqi);                          //get packet CRC

            if(debug_level > 0){                           //debug output messages
                if(rxbuffer[1] == BROADCAST_ADDRESS)       //if my receiver address is BROADCAST_ADDRESS
                {
                    printf("BROADCAST message\n");
                }

                printf("RX_FIFO: ");
                for(uint8_t i = 0 ; i < pktlen + 1; i++)   //showes rx_buffer for debug
                {
                    printf("%x", rxbuffer[i]);
                }
                printf(" |");
                printf("%x%x", rxbuffer[pktlen+1], rxbuffer[pktlen+2]);
                printf("|\n");

                printf("RSSI: %d, LQI: %x, CRC: %x\n",rssi_dbm, lqi, crc);
            }

            my_addr = rxbuffer[1];                         //set receiver address to my_addr
            sender = rxbuffer[2];                          //set from_sender address

            if(my_addr != BROADCAST_ADDRESS)               //send only ack if no BROADCAST_ADDRESS
            {
                send_acknowledge(my_addr, sender);           //sending acknowledge to sender!
            }

            return TRUE;
        }
        return FALSE;
    }
}

void CC1101::set_mode(uint8_t mode)
{
    switch (mode)
    {
        case 0x01:
                    spi_write_burst(WRITE_BURST, (uint8_t*)CC1101_GFSK_1_2_kb,CFG_REGISTER);                            //writes all 47 config register
                    break;
        case 0x02:
                    spi_write_burst(WRITE_BURST, (uint8_t*)CC1101_GFSK_38_4_kb,CFG_REGISTER);                            //writes all 47 config register
                    break;
        case 0x03:
                    spi_write_burst(WRITE_BURST, (uint8_t*)CC1101_GFSK_100_kb,CFG_REGISTER);
                    break;
        case 0x04:
                    spi_write_burst(WRITE_BURST, (uint8_t*)CC1101_MSK_250_kb,CFG_REGISTER);
                    break;
        case 0x05:
                    spi_write_burst(WRITE_BURST, (uint8_t*)CC1101_MSK_500_kb,CFG_REGISTER);
                    break;
        case 0x06:
                    spi_write_burst(WRITE_BURST, (uint8_t*)CC1101_OOK_4_8_kb,CFG_REGISTER);
                    break;
        default:
                    spi_write_burst(WRITE_BURST, (uint8_t*)CC1101_GFSK_38_4_kb,CFG_REGISTER);
                    mode = 0x02;
                    break;
    }
}

void CC1101::set_ISM(uint8_t ism_freq)
{
    uint8_t freq2, freq1, freq0;

    switch (ism_freq)                                                       //loads the RF freq which is defined in CC1101_freq_select
    {
        case 0x01:                                                          //315MHz
                    freq2=0x0C;
                    freq1=0x1D;
                    freq0=0x89;
                    spi_write_register(FREQ2,freq2);                                         //stores the new freq setting for defined ISM band
                    spi_write_register(FREQ1,freq1);
                    spi_write_register(FREQ0,freq0);
                    spi_write_burst(PATABLE_BURST, (uint8_t*)patable_power_315,8);                                //writes output power settings to CC1101

                    break;
        case 0x02:                                                          //433.92MHz
                    freq2=0x10;
                    freq1=0xB0;
                    freq0=0x71;
                    spi_write_register(FREQ2,freq2);                                         //stores the new freq setting for defined ISM band
                    spi_write_register(FREQ1,freq1);
                    spi_write_register(FREQ0,freq0);
                    spi_write_burst(PATABLE_BURST, (uint8_t*)patable_power_433,8);                                //writes output power settings to CC1101

                    break;
        case 0x03:                                                          //868.3MHz
                    freq2=0x21;
                    freq1=0x65;
                    freq0=0x6A;
                    spi_write_register(FREQ2,freq2);                                         //stores the new freq setting for defined ISM band
                    spi_write_register(FREQ1,freq1);
                    spi_write_register(FREQ0,freq0);
                    spi_write_burst(PATABLE_BURST, (uint8_t*)patable_power_868,8);                                //writes output power settings to CC1101

                    break;
        case 0x04:                                                          //915MHz
                    freq2=0x23;
                    freq1=0x31;
                    freq0=0x3B;
                    spi_write_register(FREQ2,freq2);                                         //stores the new freq setting for defined ISM band
                    spi_write_register(FREQ1,freq1);
                    spi_write_register(FREQ0,freq0);
                    spi_write_burst(PATABLE_BURST, (uint8_t*)patable_power_915,8);                                //writes output power settings to CC1101

                    break;

        default:                                                             //default is 868.3MHz
                    freq2=0x21;
                    freq1=0x65;
                    freq0=0x6A;
                    spi_write_register(FREQ2,freq2);                                         //stores the new freq setting for defined ISM band
                    spi_write_register(FREQ1,freq1);
                    spi_write_register(FREQ0,freq0);
                    spi_write_burst(PATABLE_BURST, (uint8_t*)patable_power_868,8);                                //writes output power settings to CC1101

                    ism_freq = 0x03;
                    break;
    }
}

void CC1101::set_output_power_level(int8_t dBm)
{
    uint8_t pa = 0xC0;

    if      (dBm <= -30) pa = 0x00;
    else if (dBm <= -20) pa = 0x01;
    else if (dBm <= -15) pa = 0x02;
    else if (dBm <= -10) pa = 0x03;
    else if (dBm <= 0)   pa = 0x04;
    else if (dBm <= 5)   pa = 0x05;
    else if (dBm <= 7)   pa = 0x06;
    else if (dBm <= 10)  pa = 0x07;

    spi_write_register(FREND0,pa);
}

void CC1101::spi_begin(void)
{

    //|--- Activating the SPI interface of PSOC62 --------|
    //|--- The Macros are defined in pins.h -------------|

   /* configure all SPI related pins */
    cy_rslt_t result = cyhal_spi_init( &hal_SPI, SPI_MOSI, SPI_MISO, SPI_SCLK,
                             SPI_CSN, NULL, 8, CYHAL_SPI_MODE_00_MSB, false);
    if (result != CY_RSLT_SUCCESS)
    {
        handle_error();
    }
    result = cyhal_spi_set_frequency(&hal_SPI, 1000000);    // CC1101 works around 1MHz clock;
    if (result != CY_RSLT_SUCCESS)
    {
        handle_error();
    }

}

void CC1101::spi_write_strobe(uint8_t spi_instr)
{
    SPI_DRIVE_CSN_LOW();          // CS low
    while (SPI_SI_IS_HIGH());  // Wait until MOSI_PIN becomes LOW
    spi_putc(spi_instr);
    SPI_DRIVE_CSN_HIGH();         // CS high
}

uint8_t CC1101::spi_read_register(uint8_t spi_instr)
{
    SPI_DRIVE_CSN_LOW();          // CS low
    while (SPI_SO_IS_HIGH());  // Wait until MOSI_PIN becomes LOW
    spi_putc(spi_instr | READ_SINGLE_BYTE);
    spi_instr = spi_putc(0xFF);
    SPI_DRIVE_CSN_HIGH();         // CS high

    return spi_instr;
}

void CC1101::spi_write_register(uint8_t spi_instr, uint8_t value)
{
    SPI_DRIVE_CSN_LOW();          // CS low
    while (SPI_SO_IS_HIGH());  //Wait until MOSI_PIN becomes LOW
    spi_putc(spi_instr | WRITE_SINGLE_BYTE);
    spi_putc(value);
    SPI_DRIVE_CSN_HIGH();
}

void CC1101::spi_write_burst(uint8_t spi_instr, uint8_t *pArr, uint8_t length)
{
    SPI_DRIVE_CSN_LOW();          // CS low
    while (SPI_SO_IS_HIGH());  //Wait until MOSI_PIN becomes LOW
    spi_putc(spi_instr | WRITE_BURST);

    for(uint8_t i=0; i<length ;i++)
    {
        spi_putc(pArr[i]);
    }

    SPI_DRIVE_CSN_HIGH();
}
